# cranky

./: .gitignore  Cargo.toml  GEMINI.md  Justfile  LICENSE  README.md  SPEC.md  config.toml  lefthook.yml
.gemini/skills/release-updater/: SKILL.md
.github/workflows/: release.yml
contrib/arch/: PKGBUILD  PKGBUILD-bin  PKGBUILD-git
contrib/systemd/: cranky-uwsm.service  cranky.service
src/: config.rs  main.rs  test_utils.rs  utils.rs
src/adapters/: config.rs  font.rs  hyprland.rs  metrics.rs  mod.rs  rendering.rs  sni.rs  wayland.rs  zbus.rs
src/adapters/config/: dto.rs  mod.rs
src/core/: bar.rs  hyprland.rs  input.rs  mod.rs  shm.rs
src/domain/: app.rs  applets.rs  color.rs  commands.rs  config.rs  dbus.rs  errors.rs  events.rs  geometry.rs  metrics.rs  mod.rs  render.rs  signals.rs  workspace.rs
src/domain/shared/: color.rs  geometry.rs  mod.rs  render.rs
src/modules/: actor.rs  applet.rs  hour.rs  lua.rs  mod.rs  rhai.rs  workspace.rs
src/modules/builtins/: applet.lua  hour.lua  hour.rhai  metrics.lua  workspace.lua  workspace.rhai
src/ports/: canvas.rs  dbus.rs  font.rs  mod.rs  registry.rs  registry_new.rs  sni.rs  surface.rs
src/render/: mod.rs
