[package]
name = "cranky"
version = "0.2.0"
edition = "2024"
authors = ["jao"]
description = "A minimalist, performant, and modular bar for Hyprland"

[dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Wayland
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# Logging & Error Handling
log = "0.4"
pretty_env_logger = "0.5"
thiserror = "2.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"

# Rendering
tiny-skia = "0.12"
cosmic-text = "0.18"
memmap2 = "0.9"

# System Integration
zbus = "5.14"
sysinfo = "0.38"
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.23", features = ["v4"] }
notify = "8.2"

[dev-dependencies]
mockall = "0.14"
