[package]
name = "cranky"
version = "0.5.0"
edition = "2024"
authors = ["jao"]
description = "A minimalist, performant, and modular bar for Hyprland"

[dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Wayland
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
thiserror = "2.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"

# Rendering
tiny-skia = "0.12"
cosmic-text = "0.19"
memmap2 = "0.9"

# System Integration
zbus = { version = "5.14", features = ["tokio"] }
sysinfo = "0.39"
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.23", features = ["v4"] }
notify = "8.2"
freedesktop-icons = "0.4"
image = "0.25"
resvg = "0.47"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
mlua = { version = "0.11", features = [
	"lua54",
	"vendored",
	"serialize",
	"send",
] }
rhai = { version = "1.25", features = ["sync", "serde"] }
tokio-stream = "0.1"
tracing-appender = "0.2.5"

[dev-dependencies]
mockall = "0.14"
